--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   </header>
 
   <body>
-    <img src="header.jpg" alt="">
-    <img src="hero.jpg" alt="">
-    <img src="acustica.jpg" alt="">
+    <img src="nueva-version.jpg" alt="">
   </body>
 </html>
